# fw-template-erlang-rebar

./: COPYING  ChangeLog  bootstrap  configure.ac.local
fw-pkgin/: config
fw.local/m4/: Makefile.am  template_erlang_rebar.m4  template_erlang_rebar_enable_erlrc.m4
fw.local/template/erlang-rebar/: Makefile.am.local  Makefile_dot_am  bootstrap  configure.ac  init  load-config  make-app-file  make-dist  make-post-install  make-post-remove  make-pre-remove  rebar.config.script  release-ok  source-install
fw.local/template/erlang-rebar/include/: Makefile.am  myapp.hrl
fw.local/template/erlang-rebar/src/: Makefile.am  myapp.erl
tests/: .gitignore  Makefile.am.local  test-template.in
